header lg screen

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h5 class="header col s12 light lhd-details">Join the world in a  12 Hour global event celebrating the Hacker community at your school!</h5>
       </div>
       <div class="row center">
-        <a href="#" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a href="#" id="download-button" class="lhd-button">Sign up</a>
       </div>
       <br><br>
     </div>
