--- a/index.html
+++ b/index.html
@@ -50,47 +50,20 @@
   </section>
   
 
-
-  <div class="container">
-    <div class="section">
-
-      <!--   Icon Section   -->
+  <section id="about" class="about-body">
+    <div class="container">
       <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="mdi-image-flash-on"></i></h2>
-            <h5 class="center">Speeds up development</h5>
-
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
+        <div class="intro col s12">
+          <h4 class="center-align">About</h4>
+          <h3 class="center-align">What is a hack day?</h3>
         </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="mdi-social-group"></i></h2>
-            <h5 class="center">User Experience Focused</h5>
-
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="mdi-action-settings"></i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
-          </div>
+        <div class="line-divider col s12"></div>
+        <div class="about-details center-align col s12">
+          <p>A hack day is about celebrating the hacker community at your school by coming together and building awesome projects together! During the hack day your community will come together to create and build community together over 12 hours. Don't have a hacker community at your school yet? A hack day is the perfect opportunity to kickstart a community at your school. MLH will be providing awesome programming all day long to help celebrate all the Hacker Clubs around the world.</p>
         </div>
       </div>
-
     </div>
-    <br><br>
-
-    <div class="section">
-
-    </div>
-  </div>
+  </section>
 
   <footer class="page-footer orange">
     <div class="container">
