--- a/index.html
+++ b/index.html
@@ -13,40 +13,40 @@
 <body>
   <section id="hello" class="hello-opener">
     <nav role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo"><img src="img/mlh_logo.png"></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Hello</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Friends</a></li>
-        <li><a href="#">Join</a></li>
-      </ul>
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo"><img src="img/mlh_logo.png"></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#">Hello</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Friends</a></li>
+          <li><a href="#">Join</a></li>
+        </ul>
 
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Hello</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Friends</a></li>
-        <li><a href="#">Join</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="#">Hello</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Friends</a></li>
+          <li><a href="#">Join</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+      </div>
+    </nav>
+    <div class="section no-pad-bot" id="index-banner">
+      <div class="container">
+        <div class="center lhd-logo">
+          <img src="img/lhd_logo.png" alt="Local Hack Day 2k15">
+        </div>
+        <div class="row center">
+          <h5 class="header col s12 light lhd-details">Join the world in a  12 Hour global event celebrating the Hacker community at your school!</h5>
+        </div>
+        <div class="row center">
+          <a href="#" id="download-button" class="lhd-button">Sign up</a>
+        </div>
+        <br><br>
+      </div>
     </div>
-  </nav>
-  <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-      <div class="center lhd-logo">
-        <img src="img/lhd_logo.png" alt="Local Hack Day 2k15">
-      </div>
-      <div class="row center">
-        <h5 class="header col s12 light lhd-details">Join the world in a  12 Hour global event celebrating the Hacker community at your school!</h5>
-      </div>
-      <div class="row center">
-        <a href="#" id="download-button" class="lhd-button">Sign up</a>
-      </div>
-      <br><br>
-    </div>
-  </div>
   </section>
   
 
@@ -57,9 +57,76 @@
           <h4 class="center-align">About</h4>
           <h3 class="center-align">What is a hack day?</h3>
         </div>
-        <div class="line-divider col s12"></div>
+        
+        <div class="line-divider col s12">
+          <div class="line-twerk">
+          </div>
+        </div>
+        
         <div class="about-details center-align col s12">
           <p>A hack day is about celebrating the hacker community at your school by coming together and building awesome projects together! During the hack day your community will come together to create and build community together over 12 hours. Don't have a hacker community at your school yet? A hack day is the perfect opportunity to kickstart a community at your school. MLH will be providing awesome programming all day long to help celebrate all the Hacker Clubs around the world.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="testies" class="testie-body">
+    <div class="bottom-overlay">
+      <div class="container">
+        <div class="row">
+          <div class="intro col s12">
+            <h4 class="center-align">Testimonials</h4>
+            <h3 class="center-align">All the love in the community.</h3>
+          </div>
+          <div class="line-divider col s12">
+            <div class="line-twerk">
+            </div>
+          </div>
+          <div class="hacker-test col s12 m4 l4">
+            <div class="hacker-logo center">
+              <img src="img/hacktx.png" alt="HackTX">
+            </div>
+            <div class="line-divider col s12">
+              <div class="line-twerk"></div>
+            </div>
+            <div class="statement">
+              <p>Local Hack Day’s distributed hack day model was an awesome experience since not all students get the opportunity to travel to hackathons. It was a cool feeling knowing that I was hacking at the same time as hundreds of students across the country while watching the same livestreams. It also simultaneously strengthened my local student hacker community.</p>
+            </div>
+            <div class="hacker-org">
+              <h5>- Taylor Barnett</h5>
+              <h6>Lead Organizer of HackTX</h6>
+            </div>
+          </div>
+          <div class="hacker-test col s12 m4 l4">
+            <div class="hacker-logo center">
+              <img src="img/hacktx.png" alt="HackTX">
+            </div>
+            <div class="line-divider col s12">
+              <div class="line-twerk"></div>
+            </div>
+            <div class="statement">
+              <p>Local Hack Day’s distributed hack day model was an awesome experience since not all students get the opportunity to travel to hackathons. It was a cool feeling knowing that I was hacking at the same time as hundreds of students across the country while watching the same livestreams. It also simultaneously strengthened my local student hacker community.</p>
+            </div>
+            <div class="hacker-org">
+              <h5>- Taylor Barnett</h5>
+              <h6>Lead Organizer of HackTX</h6>
+            </div>
+          </div>
+          <div class="hacker-test col s12 m4 l4">
+            <div class="hacker-logo center">
+              <img src="img/hacktx.png" alt="HackTX">
+            </div>
+            <div class="line-divider col s12">
+              <div class="line-twerk"></div>
+            </div>
+            <div class="statement">
+              <p>Local Hack Day’s distributed hack day model was an awesome experience since not all students get the opportunity to travel to hackathons. It was a cool feeling knowing that I was hacking at the same time as hundreds of students across the country while watching the same livestreams. It also simultaneously strengthened my local student hacker community.</p>
+            </div>
+            <div class="hacker-org">
+              <h5>- Taylor Barnett</h5>
+              <h6>Lead Organizer of HackTX</h6>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -96,7 +163,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
   </footer>
@@ -107,5 +174,5 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 
-  </body>
+</body>
 </html>
