--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
   <section id="hello" class="hello-opener">
@@ -46,7 +47,6 @@
         <div class="row center">
           <a href="#" id="download-button" class="lhd-button">Sign up</a>
         </div>
-        <br><br>
       </div>
     </div>
   </section>
@@ -163,39 +163,43 @@
     </div>
   </section>
 
-
-  <footer class="page-footer orange">
+  <section id="join" class="join">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
+        <div class="intro col s12">
+          <h4 class="center-align">Join Us</h4>
+          <h3 class="center-align">So what do you say?</h3>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+        <div class="line-divider col s12">
+          <div class="line-twerk">
+          </div>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+        <div class="about-details center-align col s12">
+          <p>You don’t wanna miss out on spreading the good of your community to the world.</p>
+        </div>
+        <div class="join-btn center">
+          <a href="#" id="download-button" class="join-button">Sign up</a>
         </div>
       </div>
+      
     </div>
+  </section>
+
+  <footer class="page-footer">
     <div class="footer-copyright">
       <div class="container">
-        Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        <div class="row">
+          <div class="mlh-logo col s12 m6 l6">
+            <a href="#"><img src="img/mlh_logo.png"></a>
+          </div>
+          <div class="socmed-bar col s12 m6 l6">
+            <ul>
+              <li><a href="#"><i class="fa fa-facebook-square"></i></i></a></li>
+              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </footer>
