--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 </head>
 <body>
   <section id="hello" class="hello-opener">
-    <nav role="navigation">
+    <nav class="navi-skrollz" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo"><img src="img/mlh_logo-black.png"></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#">Hello</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Friends</a></li>
+          <li><a href="#">Join</a></li>
+        </ul>
+      </div>
+    </nav>
+    <nav class="origi-nav" role="navigation">
       <div class="nav-wrapper container">
         <a id="logo-container" href="#" class="brand-logo"><img src="img/mlh_logo.png"></a>
         <ul class="right hide-on-med-and-down">
