added new stuff

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <div class="nav-wrapper container">
         <a id="logo-container" href="#" class="brand-logo"><img src="img/mlh_logo-black.png"></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Hello</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Testimonials</a></li>
-          <li><a href="#">Friends</a></li>
-          <li><a href="#">Join</a></li>
+          <li><a href="#hello">Hello</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#testies">Testimonials</a></li>
+          <li><a href="#map">Friends</a></li>
+          <li><a href="#join">Join</a></li>
         </ul>
       </div>
     </nav>
@@ -32,19 +32,19 @@
       <div class="nav-wrapper container">
         <a id="logo-container" href="#" class="brand-logo"><img src="img/mlh_logo.png"></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Hello</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Testimonials</a></li>
-          <li><a href="#">Friends</a></li>
-          <li><a href="#">Join</a></li>
+          <li><a href="#hello">Hello</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#testies">Testimonials</a></li>
+          <li><a href="#map">Friends</a></li>
+          <li><a href="#join">Join</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">Hello</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Testimonials</a></li>
-          <li><a href="#">Friends</a></li>
-          <li><a href="#">Join</a></li>
+          <li><a href="#hello">Hello<span><i class="fa fa-home"></i></span></a></li>
+          <li><a href="#about">About<span><img src="img/about_icon.png"></span></a></li>
+          <li><a href="#testies">Testimonials<span><i class="fa fa-quote-left"></i></span></a></li>
+          <li><a href="#map">Friends<span><i class="fa fa-map-marker"></i></span></a></li>
+          <li><a href="#join">Join<span><i class="fa fa-plus"></i></span></a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       </div>
