--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section id="hello" class="hello-opener">
     <nav class="navi-skrollz" role="navigation">
       <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo"><img src="img/mlh_logo-black.png"></a>
+        <a id="logo-container" href="http://mlh.io" class="brand-logo"><img src="img/mlh_logo-black.png"></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#hello">Hello</a></li>
           <li><a href="#about">About</a></li>
@@ -30,7 +30,7 @@
     </nav>
     <nav class="origi-nav" role="navigation">
       <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo"><img src="img/mlh_logo.png"></a>
+        <a id="logo-container" href="http://mlh.io" class="brand-logo"><img src="img/mlh_logo.png"></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#hello">Hello</a></li>
           <li><a href="#about">About</a></li>
